--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,21 @@
-<header>
+
+<div class="sectionOne">
   <app-navbar></app-navbar>
-</header>
+
+  <div class="logo">
+  <img src="assets/logo.png" alt="logo">
+</div>
+
+</div>
+
+<div class="sectionTwo">
+
+</div>
+
+<div class="sectionThree">
+
+</div>
+
+<div class="sectionFour">
+
+</div>
