--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,9 +1,12 @@
 nav
 {
-background-color: none;
+background-color: #00000066;
 }
 .collapse
 {
   justify-content: flex-end;
   margin-right: 20px;
+}
+a{
+  color: white;
 }
