--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,21 @@
 
 <div class="sectionOne">
-  <app-navbar></app-navbar>
-
-  <div class="logo">
-  <img src="assets/logo.png" alt="logo">
-</div>
-
-</div>
-
+    <app-navbar></app-navbar>
+    <div class="logo">
+    <img src="assets/logo.png" alt="logo">
+    </div>
+    <div class="curve">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#181818" fill-opacity="1" d="M0,160L60,181.3C120,203,240,245,360,234.7C480,224,600,160,720,117.3C840,75,960,53,1080,64C1200,75,1320,117,1380,138.7L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+      </svg>
+    </div>
+    </div>
 <div class="sectionTwo">
 
 </div>
 
-<div class="sectionThree">
 
+<div class="sectionThree">
 </div>
 
 <div class="sectionFour">
