--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,32 @@
 .sectionOne
 {
+  position: relative;
   background: url('/assets/image1.jpg') no-repeat;
-  height: 840px;
+  height: 750px;
+  width: 100%;
+  background-position: center;
+  overflow: hidden;
   background-size: cover;
+  box-sizing: border-box;
+}
+.logo
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
+.sectionOne .curve{
+  position:absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+}
+
+
+.sectionTwo{
+height: 700px;
+background-color: #181818;
+
 }
