--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,47 @@
       </svg>
     </div>
     </div>
+
 <div class="sectionTwo">
+  <div class="mainTitle">
+    <h1>Welcome</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+       Corrupti, ea.</p>
+  </div>
+
+  <div class="cardHolder">
+    <div class="cards">
+      <div class="imageBox">
+        <img src="assets/" alt="image">
+      </div>
+      <div class="content">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Quidem nesciunt, ipsum vero laboriosam aspernatur sint?</p>
+      </div>
+
+    </div>
+    <div class="cards">
+      <div class="imageBox">
+        <img src="assets/" alt="image">
+      </div>
+      <div class="content">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Quidem nesciunt, ipsum vero laboriosam aspernatur sint?</p>
+      </div>
+
+    </div>
+    <div class="cards">
+      <div class="imageBox">
+        <img src="assets/" alt="image">
+      </div>
+      <div class="content">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Quidem nesciunt, ipsum vero laboriosam aspernatur sint?</p>
+      </div>
+
+    </div>
+  </div>
+
 
 </div>
 
