--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,6 +24,7 @@
         <img src="assets/" alt="image">
       </div>
       <div class="content">
+        <h2>Breakfast</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
           Quidem nesciunt, ipsum vero laboriosam aspernatur sint?</p>
       </div>
@@ -34,6 +35,7 @@
         <img src="assets/" alt="image">
       </div>
       <div class="content">
+        <h2>Lunch</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
           Quidem nesciunt, ipsum vero laboriosam aspernatur sint?</p>
       </div>
@@ -44,6 +46,7 @@
         <img src="assets/" alt="image">
       </div>
       <div class="content">
+        <h2>Healty food</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
           Quidem nesciunt, ipsum vero laboriosam aspernatur sint?</p>
       </div>
