--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,6 +59,17 @@
 
 
 <div class="sectionThree">
+  <div class="imageHolder">
+    <img src="assets/food5.jpg" alt="img">
+  </div>
+  <div class="contentHolder">
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Asperiores ut, vero dolores,
+      praesentium dolore ad, quisquam eligendi sint iusto
+      sit suscipit? Dolores odit rem tempora itaque eius,
+      illo odio laborum?</p>
+  </div>
 </div>
 
 <div class="sectionFour">
