--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,7 +47,7 @@ background-color: #181818;
 }
 .cardHolder
 {
-  margin-top: 150px;
+  margin-top: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,3 +103,36 @@ background-color: #181818;
   font-size: 30px;
   font-weight: 600;
 }
+.sectionThree{
+display: flex;
+flex-direction: row;
+height: 809px;
+}
+
+.imageHolder{
+  display: flex;
+  width: 50%;
+}
+.imageHolder img{
+/*   width: 100%; */
+/*   height: 100%; */
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.contentHolder{
+  display: flex;
+  flex-direction: column;
+  background: #331E1A;
+  justify-content: center;
+}
+.contentHolder h2{
+  color: #ffffff;
+  text-align: center;
+}
+.contentHolder p{
+  text-align: justify;
+  color: #ffffff;
+  margin: 20px;
+}
+
