section 4 kész/ scroll hozzáadása

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,5 +73,65 @@
 </div>
 
 <div class="sectionFour">
+<div class="scroll">
+  <div class="ratingCard">
+    <div class="circle">
 
+    </div>
+    <div class="titleBox">
+      <p>Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit.
+        Est, dolores aliquid ullam ipsum
+         ad eaque.</p>
+    </div>
+  </div>
+
+  <div class="ratingCard">
+    <div class="circle">
+
+    </div>
+    <div class="titleBox">
+      <p>Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit.
+        Est, dolores aliquid ullam ipsum
+         ad eaque.</p>
+    </div>
+  </div>
+
+  <div class="ratingCard">
+    <div class="circle">
+
+    </div>
+    <div class="titleBox">
+      <p>Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit.
+        Est, dolores aliquid ullam ipsum
+         ad eaque.</p>
+    </div>
+  </div>
+
+  <div class="ratingCard">
+    <div class="circle">
+
+    </div>
+    <div class="titleBox">
+      <p>Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit.
+        Est, dolores aliquid ullam ipsum
+         ad eaque.</p>
+    </div>
+  </div>
+
+  <div class="ratingCard">
+    <div class="circle">
+
+    </div>
+    <div class="titleBox">
+      <p>Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit.
+        Est, dolores aliquid ullam ipsum
+         ad eaque.</p>
+    </div>
+  </div>
+</div>
 </div>
