section 5 megirasa kesz

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -135,3 +135,22 @@
   </div>
 </div>
 </div>
+
+<div class="sectionFive">
+  <div class="imageHolder">
+    <img src="assets/rest3.jpg" alt="img">
+  </div>
+  <div class="contentHolder">
+    <h2>Lorem ipsum dolor sit amet.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Asperiores ut, vero dolores,
+      praesentium dolore ad, quisquam eligendi sint iusto
+      sit suscipit? Dolores odit rem tempora itaque eius,
+      illo odio laborum?</p>
+  </div>
+  <div class="imageHolder">
+    <img src="assets/rest2.jpg" alt="img">
+  </div>
+</div>
+
+<app-footer></app-footer>
