--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -103,10 +103,13 @@ background-color: #181818;
   font-size: 30px;
   font-weight: 600;
 }
+
+
+///////////////////////////////////////
+
 .sectionThree{
 display: flex;
 flex-direction: row;
-height: 809px;
 }
 
 .imageHolder{
@@ -136,7 +139,7 @@ height: 809px;
   margin: 20px;
 }
 
-
+//////////////////////////////////
 .sectionFour{
   background-color: #181818;
   display: flex;
