section 5 formázás kész

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -137,10 +137,10 @@
 </div>
 
 <div class="sectionFive">
-  <div class="imageHolder">
+  <div class="restImg">
     <img src="assets/rest3.jpg" alt="img">
   </div>
-  <div class="contentHolder">
+  <div class="restHolder">
     <h2>Lorem ipsum dolor sit amet.</h2>
     <p>Lorem ipsum dolor sit amet consectetur
       adipisicing elit. Asperiores ut, vero dolores,
@@ -148,7 +148,7 @@
       sit suscipit? Dolores odit rem tempora itaque eius,
       illo odio laborum?</p>
   </div>
-  <div class="imageHolder">
+  <div class="restImg">
     <img src="assets/rest2.jpg" alt="img">
   </div>
 </div>
