--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer>
+  <div class="infoHolder">
+    <div class="logo">
+      <img src="assets/logo.png" alt="logo">
+    </div>
+    <div class="opening">
+      <p>H-K-SZ-CS-P-SZO-V</p>
+      <p>9:00-22:00</p>
+    </div>
+  </div>
+  <div class="map">
+    <i class="bi bi-pointer">Budapest, Ó utca 4</i>
+
+    <div class="social">
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-twitter"></i>
+    </div>
+  </div>
+</footer>
