footer formázása / footer szöveg formázása ideiglenesen kész

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,7 @@
 <footer>
+  <div class="empty">
+
+  </div>
 
   <div class="infoHolder">
 
@@ -14,8 +17,8 @@
   </div>
 
   <div class="map">
-    <i class="bi bi-pointer">Budapest, Ó utca 4</i>
-
+    <i class="bi bi-geo-alt-fill">Budapest, Ó utca 4</i>
+    <i class="bi bi-telephone-fill"> +36 20 444 5678</i>
     <div class="social">
       <i class="bi bi-facebook"></i>
       <i class="bi bi-instagram"></i>
