--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -39,8 +39,11 @@ text-align: center;
 }
 .map i{
   color: white;
-  font-size: 12px;
+  font-size: 15px;
 }
 .social i{
 color: orange;
+padding: 10px;
+font-size: 20px;
+
 }
