--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,10 +23,10 @@
   width: 100%;
 
 }
-
+//////////////////////////////////
 
 .sectionTwo{
-height: 700px;
+height: 650px;
 background-color: #181818;
 
 }
@@ -39,7 +39,6 @@ background-color: #181818;
 
 }
 .mainTitle h1{
-  margin-top: 50px;
   font-size: 45px;
 }
 .mainTitle p{
@@ -114,11 +113,11 @@ flex-direction: row;
 
 .imageHolder{
   display: flex;
-  width: 50%;
+  max-width: 40%;
+
 }
 .imageHolder img{
-/*   width: 100%; */
-/*   height: 100%; */
+
   background-repeat: no-repeat;
   box-sizing: border-box;
   overflow: hidden;
@@ -132,10 +131,12 @@ flex-direction: row;
 .contentHolder h2{
   color: #ffffff;
   text-align: center;
+  margin: 20px;
 }
 .contentHolder p{
   text-align: justify;
   color: #ffffff;
+  font-size: 2vmin;
   margin: 20px;
 }
 
