--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
   <div class="cardHolder">
     <div class="cards">
       <div class="imageBox">
-        <img src="assets/" alt="image">
+        <img src="assets/food2.jpg" alt="image">
       </div>
       <div class="content">
         <h2>Breakfast</h2>
@@ -32,7 +32,7 @@
     </div>
     <div class="cards">
       <div class="imageBox">
-        <img src="assets/" alt="image">
+        <img src="assets/food6.jpg" alt="image">
       </div>
       <div class="content">
         <h2>Lunch</h2>
@@ -43,7 +43,7 @@
     </div>
     <div class="cards">
       <div class="imageBox">
-        <img src="assets/" alt="image">
+        <img src="assets/food3.jpg" alt="image">
       </div>
       <div class="content">
         <h2>Healty food</h2>
