--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,8 +17,8 @@
   </div>
 
   <div class="map">
-    <i class="bi bi-geo-alt-fill">Budapest, Ó utca 4</i>
-    <i class="bi bi-telephone-fill"> +36 20 444 5678</i>
+    <p><i class="bi bi-geo-alt-fill"></i>Budapest, Ó utca 4</p>
+    <p><i class="bi bi-telephone-fill"></i>+36 20 444 5678</p>
     <div class="social">
       <i class="bi bi-facebook"></i>
       <i class="bi bi-instagram"></i>
