--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,6 +73,7 @@
 </div>
 
 <div class="sectionFour">
+  <h1>Vélemények</h1>
 <div class="scroll">
   <div class="ratingCard">
     <div class="circle">
@@ -83,6 +84,7 @@
         consectetur adipisicing elit.
         Est, dolores aliquid ullam ipsum
          ad eaque.</p>
+      <p class="rateNumber">10/10</p>
     </div>
   </div>
 
@@ -95,6 +97,7 @@
         consectetur adipisicing elit.
         Est, dolores aliquid ullam ipsum
          ad eaque.</p>
+      <p class="rateNumber">10/10</p>
     </div>
   </div>
 
@@ -107,6 +110,7 @@
         consectetur adipisicing elit.
         Est, dolores aliquid ullam ipsum
          ad eaque.</p>
+      <p class="rateNumber">10/10</p>
     </div>
   </div>
 
@@ -119,6 +123,7 @@
         consectetur adipisicing elit.
         Est, dolores aliquid ullam ipsum
          ad eaque.</p>
+      <p class="rateNumber">10/10</p>
     </div>
   </div>
 
@@ -131,6 +136,7 @@
         consectetur adipisicing elit.
         Est, dolores aliquid ullam ipsum
          ad eaque.</p>
+      <p class="rateNumber">10/10</p>
     </div>
   </div>
 </div>
