--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -24,11 +24,11 @@ justify-content: space-between;
 .navbar-nav a{
   color: white;
 }
-.btn
+#btn
 {
   margin: 0;
 }
 
-.navbar-toggler span{
+.navbar-toggler button span{
 color: rgb(255, 255, 255);
 }
