--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -41,9 +41,9 @@ background-color: #181818;
 .mainTitle h1{
   font-size: 45px;
 }
-.mainTitle p{
+/* .mainTitle p{
 
-}
+} */
 .cardHolder
 {
   margin-top: 100px;
