--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,7 +17,8 @@
   </div>
 
   <div class="map">
-    <p><i class="bi bi-geo-alt-fill"></i>Budapest, Ó utca 4</p>
+    <a href="https://www.google.com/maps/place/Budapest,+Ó+u.+4,+1066/@47.5028557,19.0538434,17z/data=!3m1!4b1!4m6!3m5!1s0x4741dc6b67bce61b:0xee74e057ab5ef610!8m2!3d47.5028557!4d19.0560321!16s%2Fg%2F11c5n92p77"><i class="bi bi-geo-alt-fill">
+    </i>Budapest, Ó utca 4</a>
     <p><i class="bi bi-telephone-fill"></i>+36 20 444 5678</p>
     <div class="social">
       <i class="bi bi-facebook"></i>
