--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,13 +12,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Főoldal</a>
+          <a class="nav-link" aria-current="page" routerLink="/home">Főoldal</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Árlista</a>
+          <a class="nav-link"routerLink="/pricelist">Árlista</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Galéria</a>
+          <a class="nav-link" routerLink="/gallery">Galéria</a>
         </li>
       </ul>
     </div>
