--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,20 @@
 
 <div class="sectionOne">
     <app-navbar></app-navbar>
+    <div class="timer">
+      <div class="description">
+        <p>Days</p>
+        <p>Hours</p>
+        <p>Minutes</p>
+        <p>Seconds</p>
+      </div>
+      <div class="timeNumber">
+        <p id="days">{{daysToDay}}</p>
+        <p id="hours">{{hoursToDay}}</p>
+        <p id="minutes">{{minutesToDay}}</p>
+        <p id="seconds">{{secondsToDay}}</p>
+      </div>
+    </div>
     <div class="logo">
     <img src="assets/logo.png" alt="logo">
     </div>
