--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,14 @@
 <div class="sectionOne">
     <app-navbar></app-navbar>
     <div class="logo">
-      <img src="assets/logo.png" alt="logo">
+      <img class="hidden" src="assets/logo.png" alt="logo">
 
       <div class="timer">
-          <div class="timeNumber">
+          <div class="hidden timeNumber">
             <p id="days">Days {{daysToDay}}</p>
             <p id="hours">Hours {{hoursToDay}}</p>
             <p id="minutes">Minutes {{minutesToDay}}</p>
-            <p id="seconds">Seconds{{secondsToDay}}</p>
+            <p id="seconds">Seconds {{secondsToDay}}</p>
           </div>
       </div>
 
@@ -22,13 +22,13 @@
     </div>
 
 <div class="sectionTwo">
-  <div class="mainTitle">
+  <div class="hidden mainTitle">
     <h1>Welcome</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
        Corrupti, ea.</p>
   </div>
 
-  <div class="cardHolder">
+  <div class="hidden cardHolder">
     <div class="cards">
       <div class="imageBox">
         <img src="assets/food2.jpg" alt="image">
@@ -70,11 +70,11 @@
 
 <div class="sectionThree">
   <div class="imageHolder">
-    <img src="assets/food5.jpg" alt="img">
+    <img class="hidden" src="assets/food5.jpg" alt="img">
   </div>
   <div class="contentHolder">
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <p>Lorem ipsum dolor sit amet consectetur
+    <h2 class="hidden">Lorem ipsum dolor sit amet.</h2>
+    <p class="hidden">Lorem ipsum dolor sit amet consectetur
       adipisicing elit. Asperiores ut, vero dolores,
       praesentium dolore ad, quisquam eligendi sint iusto
       sit suscipit? Dolores odit rem tempora itaque eius,
@@ -83,7 +83,7 @@
 </div>
 
 <div class="sectionFour">
-  <h1>Vélemények</h1>
+  <h1 class="hidden">Vélemények</h1>
 <div class="scroll">
   <div class="ratingCard">
     <div class="circle">
@@ -154,18 +154,18 @@
 
 <div class="sectionFive">
   <div class="restImg">
-    <img src="assets/rest3.jpg" alt="img">
+    <img class="hidden" src="assets/rest3.jpg" alt="img">
   </div>
   <div class="restHolder">
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <p>Lorem ipsum dolor sit amet consectetur
+    <h2 class="hidden">Lorem ipsum dolor sit amet.</h2>
+    <p class="hidden">Lorem ipsum dolor sit amet consectetur
       adipisicing elit. Asperiores ut, vero dolores,
       praesentium dolore ad, quisquam eligendi sint iusto
       sit suscipit? Dolores odit rem tempora itaque eius,
       illo odio laborum?</p>
   </div>
   <div class="restImg">
-    <img src="assets/rest2.jpg" alt="img">
+    <img class="hidden" src="assets/rest2.jpg" alt="img">
   </div>
 </div>
 
