--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,12 +4,12 @@
     <div class="logo">
       <img class="hidden" src="assets/logo.png" alt="logo">
 
-      <div class="timer">
-          <div class="hidden timeNumber">
-            <p id="days">Days {{daysToDay}}</p>
-            <p id="hours">Hours {{hoursToDay}}</p>
-            <p id="minutes">Minutes {{minutesToDay}}</p>
-            <p id="seconds">Seconds {{secondsToDay}}</p>
+      <div class="hidden timer">
+          <div class="timeNumber">
+            <p id="days">Day {{daysToDay}}</p>
+            <p id="hours">Hour {{hoursToDay}}</p>
+            <p id="minutes">Minute {{minutesToDay}}</p>
+            <p id="seconds">Second {{secondsToDay}}</p>
           </div>
       </div>
 
