font-family váltás

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -27,6 +27,7 @@ width: 50px;
 .opening{
 color: white;
 text-align: center;
+font-family: Georgia, serif;
 }
 
 .map{
@@ -36,15 +37,18 @@ text-align: center;
   width: 35%;
   text-align: center;
   padding: 20px;
+  font-family: Georgia, serif;
 }
 .map p i{
   color: white;
   font-size: 15px;
   padding: 5px;
+
 }
 .map p{
   color: white;
   font-size: 13px;
+  font-family: Georgia, serif;
 }
 .social i{
 color: orange;
