--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -17,12 +17,14 @@ justify-content: space-between;
 }
 .title{
  display: flex;
+ font-family: Georgia, serif;
 }
 .title a{
   margin-top: 5px;
 }
 .navbar-nav a{
   color: white;
+  font-family: Georgia, serif;
 }
 #btn
 {
